[package]
name = "wcs"
version = "0.3.0"
edition = "2021"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
description = "Implementation of the FITS World Coordinate System (WCS)"
license = "Apache-2.0 OR MIT"
readme = "readme.md"
categories = ["science", "algorithms"]
keywords = ["fits", "wcs", "projection"]
documentation = "https://docs.rs/wcs"
homepage = "https://github.com/cds-astro/wcs-rs/"
repository = "https://github.com/cds-astro/wcs-rs/"
exclude = [
    "tests/*",
    "examples/*",
    "*.py"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mapproj = { git = "https://github.com/cds-astro/cds-mapproj-rust", branch = "main" }
enum_dispatch = "0.3.8"
fitsrs = "0.2.10"
quick-error = "2.0.1"
paste = "1.0.15"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
paste = "1.0.15"

[dev-dependencies]
image = "0.24.5"
csv = "1.1"
glob = "0.3.0"